--- a/css/db_main.css
+++ b/css/db_main.css
@@ -50,6 +50,7 @@ header {
     border-radius: 5px;
     display: flex; 
     justify-content: center; 
+    font-weight: 400;
 }
 .hbox1 { 
     color:white;
@@ -131,6 +132,13 @@ main {
     font-weight: bold;
     font-size: 18px;
 }
+.mbox1-1 .pagebox {
+    display: flex;
+    position: absolute;
+    bottom: 20px;
+    left:50%;
+    transform: translateX(-50%);
+}
 .mbox1-1 .tempul {
     position: absolute;
     top:20px;
@@ -186,6 +194,7 @@ main {
     left:0px;   
     background-color: transparent;  
     font-size: 16px !important;  
+    font-weight: 400 !important;
   }
   .GaugeMeter SPAN,
   .GaugeMeter B,
@@ -214,34 +223,74 @@ main {
     position: relative; 
 } 
  
+.mbox1-4{
+  width:460px;
+  height: 400px; 
+  border:1px solid #ececec81; 
+  border-radius: 5px;  
+  position: relative; 
+} 
+.mbox1-4>p {
+  margin-top: 20px;
+  margin-left: 20px;
+  font-weight: bold;
+  font-size: 18px;
+} 
  
 /* 탕전기 동작현황의 pagebox */
 /* 탕전기 동작 현황 */
 .mbox1-2-1 {
-    width: 400px;
-    height: 200px;  
-    margin-bottom: 10px; 
-    border-radius: 5px; 
-    display: flex;
-    justify-content: space-evenly;
+  width: 400px;
+  height: 200px;  
+  margin-bottom: 10px; 
+  border-radius: 5px; 
+  display: flex;
+  justify-content: space-evenly;
+}  
+.mbox1-4-1 {
+  width: 400px;
+  height: 200px;  
+  margin-bottom: 10px; 
+  border-radius: 5px; 
+  display: flex;
+  justify-content: space-evenly;
 }  
 .mbox1-2 .pagebox {
-    position: absolute;  
-    bottom:20px;
-    left:50%;
-    transform: translateX(-50%);    
-    display: flex;
+  position: absolute;  
+  bottom:20px;
+  left:60%;
+  transform: translateX(-60%);    
+  display: flex;
+}
+.mbox1-4 .pagebox { 
+  position: absolute;  
+  bottom:20px;
+  left:50%;
+  transform: translateX(-50%);    
+  display: flex;
 }
  
 /* pownow 탕동현의 상태값 */
 /* &&& radarchart 의 전체 작업 현황의 상태값 */
-.mbox1-2-1 .status {
+.mbox1-2-1 .status { 
     width: 100px;
     height: 100px; 
     display: flex; 
     flex-flow: column; 
-    margin-top: 20px;
-    position: relative; 
+    margin-top: 20px; 
+    position: absolute;
+    top:40px;
+    left:40px;
+}   
+.mbox1-4-1 .status { 
+  width: 100px;
+  height: 100px; 
+  display: flex; 
+  flex-flow: column; 
+  margin-top: 20px; 
+  position: absolute;
+  top:60px;
+  left:40px;
 }   
 .status1-1, .status1-2, .status1-3 {
     width: 60px;
@@ -281,22 +330,63 @@ main {
     width: 200px;   
     height: 100px; 
     box-sizing: border-box;
-    margin-top:20px;
+    margin-top:20px; 
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
     grid-template-rows: 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px;
+    position: absolute;
+    left:65%;
+    transform: translateX(-65%);
     /* grid-template-rows: 25px 25px 25px 25px 25px 25px 25px 25px 25px 25px; */
 }
-
+.babywrap {
+  width: 300px;   
+  height: 250px;   
+  position: absolute;
+  top:80px;
+  left:140px;
+  display: grid;
+  grid-template-columns: 5fr 5fr 5fr 5fr 5fr ; 
+  grid-template-rows: 50px 50px 50px 50px 50px ;
+}
+.mbox1-4-1 .decwrap { 
+  width: 300px;   
+  height: 250px;  
+  position: absolute;
+  top:80px;
+  left:140px; 
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 2fr 1fr 1fr 1fr 1fr 1fr; 
+  grid-template-rows: 20px 20px 20px 20px 40px 20px 20px 20px 20px 20px;
+}
+.decwrap .decstatus {
+  width: 10px; 
+  height: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  border-radius: 50%;
+  border: 1px solid transparent;
+}  
 .wrapper .statusbox { 
-    width: 8px; 
-    height: 8px; 
-    border-radius: 50%;
-    border: 1px solid transparent;
+  width: 8px; 
+  height: 8px; 
+  border-radius: 50%;
+  border: 1px solid transparent;
+}  
+.babywrap .statusbox { 
+  width: 20px; 
+  height: 20px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  border-radius: 50%;
+  border: 1px solid transparent; 
 } 
 .wrapper .fifthbox {
     margin-right: 20px;
 }
+.babywrap .fifthbox { 
+  margin-right: 20px;
+} 
 .standbymode {
     background-color: #ececec;
 }  
@@ -623,7 +713,152 @@ main {
     background-color: #C322FB;
 }  
 
- 
+/* everseries */
+.mbox2-2 .everleft{
+  width: 420px; 
+}
+
+.mbox2-2 .everright {
+  width: 500px;  
+}
+.mbox2-2 .everleft>p,
+.mbox2-2 .ever1-1>p, 
+.mbox2-2 .ever1-2>p {
+  margin-top: 20px;
+  margin-left: 20px;
+  font-size: 18px;
+  font-weight: bold;
+}
+.mbox2-2 .ever1-3>p {
+  margin-left: 20px;
+  font-size: 18px;
+  font-weight: bold; 
+}
+.mbox2-2 .everleft>p:nth-child(2) { 
+  font-size: 14px;
+  margin-top: 0;
+  margin-left: 300px;
+  font-family: 'noto sans kr';
+  font-weight: 300;
+}
+
+/* 작업시간 평균 */
+.everright {
+  display: flex;
+  flex-flow: column;
+}
+.ever1-1, .ever1-2, .ever1-3 {
+  width: 500px;
+}
+.ever1-1, .ever1-2 {
+  display: flex;
+  justify-content: space-between;
+}
+.ever1-1 { 
+  height: 100px; 
+  margin-bottom: 10px; 
+
+}
+.ever1-2 { 
+  height: 100px; 
+  margin-bottom: 10px;  
+} 
+.ever1-3 { 
+  height: 200px;   
+  margin-top: 10px; 
+}   
+
+.timecard1-1, .timecard1-2 { 
+  width: 300px; 
+  display: flex;
+  align-items: center;   
+}
+
+.timecard1-1>p:nth-child(1), 
+.timecard1-2>p:nth-child(1) {
+  width: 100px;
+  height: 50px;  
+  line-height: 30px;
+  background-color: #ececec21;
+  border-radius: 5px; 
+  text-align: center;
+  padding: 10px 0;
+  margin: 0 10px;
+}
+.timecard1-1>p:nth-child(2), 
+.timecard1-2>p:nth-child(2) {
+  width: 100px;
+  height: 50px; 
+  line-height: 30px;
+  font-size: 32px;
+  font-weight: 500;
+  font-family: 'chakra petch'; 
+  background-color: #ececec21;
+  border-radius: 5px; 
+  text-align: center; 
+  padding: 10px 0;
+  margin: 0 10px;
+} 
+.timecard1-1>span, 
+.timecard1-2>span {
+  width: 30px;
+  height: 50px; 
+  line-height: 30px;
+  font-size: 16px; 
+  background-color: #ececec21;
+  border-radius: 5px; 
+  text-align: center; 
+  padding: 10px 0;
+  margin: 0 10px;
+}
+/* 택배 작업 건수 */ 
+
+.parcon { 
+  display: flex;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+.parcon1-1, .parcon1-2 { 
+  width: 225px;
+  margin-left: 10px;
+  display: flex;
+  flex-flow: column;
+}
+.par1-1, .par1-2, 
+.par1-3, .par1-4 { 
+  display: flex;
+} 
+.par1-1>p:nth-child(1), 
+.par1-2>p:nth-child(1), 
+.par1-3>p:nth-child(1), 
+.par1-4>p:nth-child(1)  {
+  width: 80px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 18px; 
+  background-color: #ececec21;
+  text-align: center; 
+  padding: 0 10px ;
+  margin: 10px 0;
+  margin-right: 10px;
+  border-radius: 5px;
+}
+.par1-1>p:nth-child(2), 
+.par1-2>p:nth-child(2), 
+.par1-3>p:nth-child(2), 
+.par1-4>p:nth-child(2)  {
+  width: 180px;
+  height: 40px; 
+  line-height: 40px;
+  font-size: 22px;
+  font-family: 'chakra petch'; 
+  background-color: #ececec21;
+  text-align: center;
+  padding: 0 5px ;
+  margin: 10px 0;
+  margin-right: 10px;
+  border-radius: 5px;
+} 
 
 
 /* main box -area3 --------------------------------- */
@@ -662,7 +897,23 @@ main {
     border:1px solid #ececec81;
 }
 
-/* 탕전 주문 건수, 예비조제 주문건수 */
+/* 탕전 주문 건수, 예비조제 주문건수 */ 
+/* 주간그래프 */
+.weekbox {
+  margin-top: -25px;
+  margin-left: 80px;
+  width:260px;  
+
+} 
+/* weekly의 pagebox */
+.mbox3-1 .pagebox {
+  position: absolute;
+  bottom:10px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+}
+
 .weeklyul {
     width: 200px;
     height: 50px; 
@@ -700,20 +951,20 @@ main {
 .mbox3-1 {
     position: relative;
 }
-.weekbox {
-    margin-top: -15px;
-    margin-left: 80px;
-    width:260px;  
-
-} 
-/* weekly의 pagebox */
-.mbox3-1 .pagebox {
-    position: absolute;
-    bottom:10px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
+.mbox3-1, .mbox3-4 {
+  border-radius: 5px;
+  width: 460px;
+  position: relative; 
+  border:1px solid #ececec81; 
 }
+.mbox3-4 {
+  height: 400px;
+}
+.mbox3-4>p { 
+  font-weight: bold;
+  margin-top: 20px;
+  margin-left: 20px;
+} 
 .mbox3-2 {
     position: relative;
 }
@@ -734,9 +985,38 @@ main {
 .pages:nth-child(1) {
     background-color: #fff;
 }
-
-/* 주간그래프 */
-/* 택배 마감 시간, flipcard*/ 
+ 
+/* 택배 마감 시간, flipcard*/  
+.clockbox {
+  margin-top: 30px;
+  margin-left: 20px;
+  width: 420px;
+  height: 300px; 
+}
+.clockbox1-1, 
+.clockbox1-2, 
+.clockbox1-3 {
+  width: 420px;
+  height: 100px;
+  overflow: hidden;  
+}
+.clockbox1-1>p, .clockbox1-2>p, .clockbox1-3>p {
+  /* display: inline-block; */
+  width: 70px;
+  text-align: center;
+  font-size: 18px;
+  padding: 20px 0;
+  border-radius: 5px;
+  margin-top: 1cqi;
+  margin-left: 300px;
+  background-color: #ececec21; 
+}
+.clockbox1-1 .clock, 
+.clockbox1-2 .clock, 
+.clockbox1-3 .clock {
+  margin-top: -70px;
+  margin-left: 40px;
+}
 .clock {
     margin-top: 20px;
     margin-left: 100px; 
@@ -1012,8 +1292,8 @@ main {
     display: flex;
     justify-content: center;   
  }    
-.fbox1-1, .fbox2-1 { 
-    width: 100px;
+.fbox1-1, .fbox2-1 {  
+    width: 150px;
     height: 40px; 
     display: flex;
     flex-flow: column;
@@ -1021,8 +1301,8 @@ main {
     top:60px;
     left:40px;
 }
-.fcbox { 
-    width: 100px;
+.fcbox {  
+    width: 150px;
     height: 20px;
     display: flex;
     align-items: center;
@@ -1104,3 +1384,11 @@ main {
   transform: translateX(-53%);
 } 
  
+.fbox2 .pagebox {  
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  bottom:20px;
+  left:53%;
+  transform: translateX(-53%);
+} 
