--- a/css/db_main.css
+++ b/css/db_main.css
@@ -625,52 +625,76 @@ main {
     height: 200px;
 }
 .barbox {
-    width: 300px;
-    height: 180px;
-    margin-top: 0px;
-    margin-left: 40px;
+  width: 360px;
+  height: 180px;
+  margin-top: 0px;
+  margin-left: 40px;
 }
 /* 작업시간평균 */
 .cardbox {
-    width: 360px;
-    height: 120px;
-    margin-top: 10px;
-    margin-left: 20px;
-    display: flex;
-    flex-flow: column;
+  width: 360px;
+  height: 120px;
+  margin-top: 20px;
+  margin-left: 20px;
+  display: flex;
+  flex-flow: column;
+}
+
+.cardbox1, .cardbox2 {
+  display: flex;
 }
 .cardbox1-1,
 .cardbox1-2,
 .cardbox1-3,
 .cardbox1-4 {
-    display: flex;
-    margin-bottom: 5px;
-    margin-left: 20px;
+  display: flex;
+  margin-bottom: 5px;
+  margin-left: 20px;
 }
 .cardbox1-1>p:nth-child(1),
 .cardbox1-2>p:nth-child(1),
 .cardbox1-3>p:nth-child(1),
 .cardbox1-4>p:nth-child(1) {
-    font-size: 14px;
-    padding: 0 10px;
-    background-color: #ececec21;
-    margin-right: 20px;
-    border-radius: 5px;
+  width: 50px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 14px;
+  text-align: center; 
+  background-color: #ececec21;
+  /* border:1px solid #ececec21; */
+  margin-right: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;  
 }
 .cardbox1-1>p:nth-child(2),
 .cardbox1-2>p:nth-child(2),
 .cardbox1-3>p:nth-child(2),
 .cardbox1-4>p:nth-child(2) {
-    width: 180px;
-    text-align: center;
-    font-size: 16px;
-    font-weight:5400;
-    font-family: 'chakra petch';
-    padding: 0 10px;
-    background-color: #ececec21;
-    margin-right: 20px;
-    border-radius: 5px;
+  width: 70px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  font-size: 22px; 
+  font-family: 'chakra petch'; 
+  background-color: #ececec21;
+  margin-right: 10px; 
+  border-radius: 5px;
+  font-weight: 500; 
 }
+.cardbox1-1 span,
+.cardbox1-2 span,
+.cardbox1-3 span,
+.cardbox1-4 span { 
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  font-size: 14px;  
+  font-family: 'chakra petch'; 
+  background-color: #ececec21; 
+  border-radius: 5px;
+}
+
 
 /* main box -radar chart --------------------------------- */
 /* 전체작업현황 */
@@ -746,22 +770,23 @@ main {
 .everright {
   display: flex;
   flex-flow: column;
+  position: relative;
 }
 .ever1-1, .ever1-2, .ever1-3 {
   width: 500px;
 }
-.ever1-1, .ever1-2 {
+/* .ever1-1, .ever1-2 {
   display: flex;
   justify-content: space-between;
-}
+} */
 .ever1-1 {
-  height: 100px;
+  height: 100px; 
   margin-bottom: 10px;
 
 }
 .ever1-2 {
   height: 100px;
-  margin-bottom: 10px;
+  margin-bottom: 10px; 
 }
 .ever1-3 {
   height: 200px;
@@ -769,47 +794,45 @@ main {
 }
 
 .timecard1-1, .timecard1-2 {
-  width: 300px;
+  width: 450px;
   display: flex;
   align-items: center;
+  margin-top: 20px;
+  margin-left: 30px;
 }
 
 .timecard1-1>p:nth-child(1),
 .timecard1-2>p:nth-child(1) {
-  width: 100px;
-  height: 50px;
-  line-height: 30px;
+  width: 70px;
+  height: 40px;
+  line-height: 40px;
   background-color: #ececec21;
   border-radius: 5px;
-  text-align: center;
-  padding: 10px 0;
-  margin: 0 10px;
+  text-align: center; 
+  margin-right: 10px;
 }
 .timecard1-1>p:nth-child(2),
 .timecard1-2>p:nth-child(2) {
-  width: 100px;
-  height: 50px;
-  line-height: 30px;
-  font-size: 32px;
+  width: 360px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 28px;
   font-weight: 500;
   font-family: 'chakra petch';
   background-color: #ececec21;
-  border-radius: 5px;
-  text-align: center;
-  padding: 10px 0;
-  margin: 0 10px;
+  border-radius: 5px 0 0 5px;
+  text-align: center;  
 }
 .timecard1-1>span,
 .timecard1-2>span {
   width: 30px;
-  height: 50px;
-  line-height: 30px;
+  height: 40px;
+  line-height: 40px;
   font-size: 16px;
   background-color: #ececec21;
-  border-radius: 5px;
-  text-align: center;
-  padding: 10px 0;
-  margin: 0 10px;
+  border-radius: 0 5px 5px 0;
+  text-align: center;  
+  padding-right: 20px;
 }
 /* 택배 작업 건수 */
 
