--- a/css/db_mode1.css
+++ b/css/db_mode1.css
@@ -775,9 +775,9 @@ height: 400px;
 }
 .pages {
   width: 10px;
-  height: 5px;
-  border-radius: 3px;
-  border: 1px solid #ececec; 
+  height: 10px;
+  border-radius: 50%;
+  border: 1px solid #ececec;
   margin-right: 10px;
 }
 .pages:nth-child(1) {
